[gd_scene load_steps=8 format=3 uid="uid://c1e000envgrbh"]

[ext_resource type="Shader" uid="uid://cdmbjoef8r2pv" path="res://ui/pause_menu.gdshader" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://cxbxwfbnrtayx" path="res://ui/pause_menu.gd" id="1_nwcfo"]
[ext_resource type="Theme" uid="uid://b14nn8m5kk2vx" path="res://ui/base_theme.tres" id="3_fob5h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nwcfo"]
shader = ExtResource("1_hdmo1")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_nwcfo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hdmo1"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwcfo"]
_data = {
&"RESET": SubResource("Animation_nwcfo"),
&"blur": SubResource("Animation_hdmo1")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nwcfo")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nwcfo")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -224.0
offset_right = 257.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
visible = false
layout_mode = 2
color = Color(0.468918, 0.248004, 0.356911, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_fob5h")
theme_override_font_sizes/font_size = 48
text = "Pause Menu"

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fob5h")
theme_override_font_sizes/font_size = 36
text = "Resume"

[node name="Title Screen" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fob5h")
theme_override_font_sizes/font_size = 36
text = "Title Screen"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fob5h")
theme_override_font_sizes/font_size = 36
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nwcfo")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Title Screen" to="." method="_on_title_screen_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
